--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,8 @@
 
 % Define fancy style for thesis
 \fancypagestyle{main}{
-    \fancyhead[L]{\chaptername \, \thechapter:  \small{\textsf{\leftmark}}}
+%    \fancyhead[L]{\chaptername \, \thechapter:  \small{\textsf{\leftmark}}}
+    \fancyhead[L]{\chaptername \, \thechapter}
     \fancyhead[R]{\small{\textsf{\rightmark}}}
     \fancyfoot[R]{\small{\thepage}}
     \fancyfoot[L]{\small{\theauthor}}
