--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -136,3 +136,55 @@ Moreover, the same gas - Argon - is used as a carrier gas during the experiments
 \caption{Thermal conductivity in \unit{\mW \per \meter \per \kelvin} of gases \parencite{ThermalConductivityOfGases}.}
 \label{tab:ThermalConductivity}
 \end{table}
+
+Two temperature ramps at a reactor pressure of \qty{0.3}{\bar} (fig. \ref{fig:TempRamps} - c, d) were carried out to probe the evolution of the reaction product as a function of the temperature under a constant gas flow (\qty{41}{\ml\per\min} of \argon, \qty{8}{\ml\per\min} of \dioxygen, \qty{1}{\ml\per\min} of \ammonia).
+The excess of oxygen compared to ammonia is expected to favour the production of \nitricoxide at high temperatures (sec. \ref{sec:AmoOxiHC}).
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/gas_analysis/figures/ThermocoupleCalibration.pdf}
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/gas_analysis/figures/ThermocoupleFit03bar.pdf}
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/Test_Reactor_CO2_2021_01/Figures/TempRamp1.pdf}
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/Test_Reactor_CO2_2021_01/Figures/TempRamp2.pdf}
+    \caption{
+        a) Temperature inside the reactor cell measured with a type C thermocouple under vacuum and different \argon pressures.
+        b) Polynomial fit of the temperature as a function of the heater current.
+        Partial pressures evolution under a constant gas flow (\qty{41}{\ml\per\min} of \argon, \qty{8}{\ml\per\min} of \dioxygen, \qty{1}{\ml\per\min} of \ammonia) at a reactor pressure of \qty{0.3}{\bar} during increasing and decreasing (low transparency) temperature ramps to c) \qty{525}{\degreeCelsius} with 150 steps, each lasting \qty{10}{\second}, and d) to \qty{650}{\degreeCelsius} with 100 steps, each lasting \qty{10}{\second}.
+        Oxygen is omitted for simplicity.
+    }
+    \label{fig:TempRamps}
+\end{figure}
+
+The first temperature ramp to \qty{525}{\degreeCelsius} shows that the air present in the cell was not well extracted before reaching a temperature of \qty{300}{\degreeCelsius} \qty{14}{\min} after starting heating, the pressure of \nitrogen and \water continuously decreasing until then.
+Above \qty{300}{\degreeCelsius}, the pressure of \nitrogen and \nitricoxide starts to increase, with a sligtly lower activation temperature for \nitrogen.
+No production of \nitrousoxide can be detected during this temperature ramp.
+
+A second temperature ramp was carried out to \qty{650}{\degreeCelsius} to see if the the activation temperature for the production of \nitrousoxide could be achieved.
+The partial pressure of each reaction product is lower at the beginning of the temperature ramp which shows that the remaining air was well extracted.
+The activation temperature for the production of \nitrogen can be more easily identified to be around \qty{300}{\degreeCelsius} and near \qty{450}{\degreeCelsius} for \nitricoxide, which is in accord with the data from the first temperature ramp.
+
+However, the activation temperature for \nitrousoxide in the second temperature ramp is at about \qty{450}{\degreeCelsius}, a temperature that was reached during the first temperature ramp as well, but without the detection of \nitrousoxide.
+This could be linked to either an activation process of the catalyst that lowers the activation temperature for the production of nitrous oxide, or more probably to a very low signal to noise ratio that hides the evolution of the partial pressure due to the remaining air in the reactor, the partial pressure on \nitrousoxide being the lowest of all the detected gases.
+
+According to these primary results, the study of the oxidation of ammonia with BCDI was originally decided to be carried out at \qtylist{300;500;600}{\degreeCelsius}, temperatures before and after the catalyst light off (tab. \ref{tab:Conditions}).
+
+\begin{table}[!htb]
+    \centering
+    %\resizebox{\textwidth}{!}{%
+    \begin{tabular}{@{}cclc@{}}
+    \toprule
+    \multicolumn{3}{c}{Gas flow (\unit{\ml\per\min})} & Targeted information \\
+    \multicolumn{1}{l}{\argon} & \multicolumn{1}{l}{\ammonia} & \dioxygen & \multicolumn{1}{l}{} \\
+    \midrule
+    50 & 0 & 0 & Catalyst state without reactants (unactive) \\
+    49 & 1 & 0 & \ammonia introduction influence \\
+    48.5 & 1 & 0.5 & \multirow{4}{*}{\begin{tabular}[c]{@{}c@{}}Influence of \ammonia / \dioxygen ratio as a function\\ of the temperature and vice-versa\end{tabular}} \\
+    48 & 1 & 1 &  \\
+    47 & 1 & 2 &  \\
+    41 & 1 & 8 &  \\
+    \bottomrule
+    \end{tabular}%
+    %}
+    \caption{}
+    \label{tab:Conditions}
+\end{table}
