--- a/Sections/6_Appendix/Nanoparticles.tex
+++ b/Sections/6_Appendix/Nanoparticles.tex
@@ -1,4 +1,4 @@
-\section{Facet data during temperature ramp}
+\section{Temperature ramp}
 
 The particle Amaterasu was studied during a temperature ramp, 3D views of the particle can be found in fig. \ref{fig:Amaterasu} in sec. \ref{sec:TempRampBCDI}.
 
@@ -41,6 +41,37 @@ The particle Amaterasu was studied during a temperature ramp, 3D views of the pa
     \label{fig:AmaterasuDisplacement}
 \end{figure}
 
+\section{SXRD on Pt nanoparticles}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=0.8\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/epitaxy/200.pdf}
+    \caption{
+        Integrated intensity in a \ang{1} range around the value of the (200) scattering angle, as a function of the in-plane sample angle $\omega$.
+    }
+    \label{fig:Epitaxy200}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=0.8\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/epitaxy/111.pdf}
+    \caption{
+        Integrated intensity in a \ang{1} range around the value of the (111) scattering angle, as a function of the in-plane sample angle $\omega$.
+    }
+    \label{fig:Epitaxy111}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/epitaxy/powder_300.pdf}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/epitaxy/powder_500.pdf}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/epitaxy/powder_600.pdf}
+    \caption{
+        Scattered intensity as a function of $\delta$ showing the Bragg peak originating from the substrate near \ang{16}, the
+        (220) powder ring near \ang{27.9} and the (220) Bragg peak from the [111] oriented nanoparticles near \ang{28.1}.
+    }
+    \label{fig:PowderNanoparticles}
+\end{figure}
 
 \section{Mass spectrometer data during ammonia oxidation on Pt nanoparticles}
 
